fix: add letter-spacing for PP

--- a/style.css
+++ b/style.css
@@ -227,6 +227,7 @@ img {
   font-style: normal;
   text-align: justify;
   color: #767e9e;
+  letter-spacing: -0.21px;
 }
 
 .slider {
@@ -410,6 +411,10 @@ img {
   margin-left: 1px;
 }
 
+.list__title--support {
+  letter-spacing: -0.29px;
+}
+
 .list__text {
   margin: 0;
 
@@ -420,6 +425,10 @@ img {
   font-style: normal;
   text-align: justify;
   color: #767e9e;
+}
+
+.list__text--support {
+  letter-spacing: -0.06px;
 }
 
 .portfolio {
@@ -581,7 +590,7 @@ img {
 }
 
 .about-us__item-text--adam {
-  letter-spacing: -0.09px;
+  letter-spacing: -0.17px;
 }
 
 .about-us__item-social {
